--- a/Graph2.qmd
+++ b/Graph2.qmd
@@ -4,23 +4,33 @@ format: html
 editor: visual
 ---
 
-## Quarto
-
-Quarto enables you to weave together content and executable code into a finished document. To learn more about Quarto see <https://quarto.org>.
-
-## Running Code
-
-When you click the **Render** button a document will be generated that includes both content and the output of embedded code. You can embed code like this:
+## Rainfall vs Concentrations from 2014 to 2020
 
 ```{r}
-1 + 1
+library(tidyverse)
+library(patchwork)
+library(plotly)
+library(lubridate)
 ```
-
-You can add options to executable code like this
 
 ```{r}
-#| echo: false
-2 * 2
+#pull the data
+SMOL_file_path <- "/courses/EDS214/group_project/SMOL/data/data2/Data"
+Bisley_rain_data <- read_csv(file.path(SMOL_file_path, "weatherDat.csv"))
+head(Bisley_rain_data)
 ```
 
-The `echo: false` option disables the printing of code (only output is displayed).
+```{r}
+
+#create a subset to remove unnecessary columns
+#average rainfall data to yearly
+#multiplying by 24 because the original data was an average of the hourly rainfall in mm per day
+
+Bisley_rain_subset <- Bisley_rain_data %>% 
+  mutate(Precip_daily = `Precipitation (mm/hr)`*24) %>% 
+  select(year, `Precipitation (mm/hr)`,Precip_daily) %>% 
+  filter(year %in% c(2008:2020)) %>% 
+  group_by(year) %>% 
+  summarize(Bisley_yearly = sum(Precip_daily, na.rm = TRUE))
+
+```
