--- a/Graph2.qmd
+++ b/Graph2.qmd
@@ -15,9 +15,17 @@ library(lubridate)
 
 ```{r}
 #pull the data
-SMOL_file_path <- "/courses/EDS214/group_project/SMOL/data/data2/Data"
+SMOL_file_path_1 <- "/courses/EDS214/group_project/SMOL/data/"
+SMOL_file_path_2 <- "/courses/EDS214/group_project/SMOL/data/data2/Data"
 Bisley_rain_data <- read_csv(file.path(SMOL_file_path, "weatherDat.csv"))
 head(Bisley_rain_data)
+
+BQ1_data <- read_csv(file.path(SMOL_file_path_1, "QuebradaCuenca1-Bisley.csv"))
+head(BQ1_data)
+BQ2_data <- read_csv(file.path(SMOL_file_path_1, "QuebradaCuenca2-Bisley.csv"))
+head(BQ2_data)
+BQ3_data <- read_csv(file.path(SMOL_file_path_1, "QuebradaCuenca3-Bisley.csv"))
+head(BQ3_data)
 ```
 
 ```{r}
@@ -29,8 +37,26 @@ head(Bisley_rain_data)
 Bisley_rain_subset <- Bisley_rain_data %>% 
   mutate(Precip_daily = `Precipitation (mm/hr)`*24) %>% 
   select(year, `Precipitation (mm/hr)`,Precip_daily) %>% 
-  filter(year %in% c(2008:2020)) %>% 
+  filter(year %in% c(2008:2018)) %>% 
   group_by(year) %>% 
   summarize(Bisley_yearly = sum(Precip_daily, na.rm = TRUE))
 
+```
+
+```{r}
+#BQ NO3 and K data for 2008 to 2018
+BQ_join <- full_join(BQ1_data, BQ2_data) %>% 
+  full_join(BQ3_data)
+
+BQ_subset <- BQ_join %>% 
+  select(Sample_ID, Sample_Date, `NO3-N`) %>% 
+  mutate(year = lubridate::year(Sample_Date)) %>%
+  filter(year %in% c(2008:2020)) %>% 
+  group_by(year) %>% 
+  summarize(mean_nitrate = mean(`NO3-N`, na.rm = TRUE))
+```
+
+```{r}
+#join the precip and nitrate data by year
+BQ_rain_join <- full_join(Bisley_rain_subset, BQ_subset)
 ```
