--- a/Graph2.qmd
+++ b/Graph2.qmd
@@ -11,13 +11,14 @@ library(tidyverse)
 library(patchwork)
 library(plotly)
 library(lubridate)
+library(scales)
 ```
 
 ```{r}
 #pull the data
 SMOL_file_path_1 <- "/courses/EDS214/group_project/SMOL/data/"
 SMOL_file_path_2 <- "/courses/EDS214/group_project/SMOL/data/data2/Data"
-Bisley_rain_data <- read_csv(file.path(SMOL_file_path, "weatherDat.csv"))
+Bisley_rain_data <- read_csv(file.path(SMOL_file_path_2, "weatherDat.csv"))
 head(Bisley_rain_data)
 
 BQ1_data <- read_csv(file.path(SMOL_file_path_1, "QuebradaCuenca1-Bisley.csv"))
@@ -58,19 +59,29 @@ BQ_subset <- BQ_join %>%
 
 ```{r}
 #join the precip and nitrate data by year
-BQ_rain_join <- full_join(Bisley_rain_subset, BQ_subset)
+BQ_rain_join <- full_join(Bisley_rain_subset, BQ_subset) %>% 
+  mutate(year = as.numeric(format(year(as.Date(as.character(year), format = "%Y"))), "%Y"))
 ```
 
 ```{r}
-plotQ2_nitrate <- ggplot(data = BQ_rain_join, aes(x = year, y = mean_nitrate)) +
-  geom_line()
+#BQ_rain_join$year <- y(BQ_rain_join$year)))),
+plotQ2_nitrate <- ggplot(data = BQ_rain_join, aes(x = year, y = mean_nitrate))+
+  geom_line(data = BQ_rain_join, aes(x = year, y = mean_nitrate))+
+  labs(x = "Years", y = "Nitrate (mg/L)")+
+  geom_point()+
+  scale_x_continuous(breaks= pretty_breaks())
 
-plotQ2_rain <- ggplot(data = BQ_rain_join, aes(x = year, y = Bisley_yearly)) +
-  geom_line()
+plotQ2_rain <- ggplot(data = BQ_rain_join, aes(x = year, y = Bisley_yearly))+
+  geom_point()+
+  geom_line()+
+  labs(x = "Years", y = "Rainfall (mm/yr)")+
+  scale_x_continuous(breaks= pretty_breaks())
 
 plotQ2_nitrate
 
 plotQ2_rain
 
-subplot(plotQ2, plotQ2_rain, nrows = 2, shareX = TRUE)
+(plotQ2_nitrate/plotQ2_rain)
+
+#subplot(plotQ2, plotQ2_rain, nrows = 2, shareX = TRUE, titleX = TRUE, titleY = TRUE)
 ```
